# Evergreen

./: .gitattributes  .gitignore  .mailmap  AUTHORS  COPYING  ChangeLog  DCO-1.1.txt  Dockerfile  HACKING  LICENSE.txt  Makefile  Makefile.am  NEWS  README  README.adoc  RELEASE_NOTES  RELEASE_NOTES.txt  add_translations.py  attributions.txt  autogen.sh  commit-template  config.sh  configoptions.sh  configure.ac  docker-compose.yml  install.conf.default  install.sh  licensing.txt  new_upgrades.txt  old_upgrades.txt  package-lock.json  patron_record_field_definitions.adoc  receipt_template_ed  release_notes.txt  root.txt  root.xml  server_upgrade.txt  system_requirements.txt
Evergreen/: Makefile  Makefile.am
Evergreen/circ_rules/: calculate_duration.rules  calculate_max_fines.rules  calculate_recurring_fines.rules  circ_main.rules  circ_permit.js  dr_script.ttk  permit_circ.rules  permit_hold.rules  script_libs.js
Evergreen/conf/: lib_ips.txt  load_ips.pl
Evergreen/css/opac/: adv_search.css  box.css  context_menu.css  my_opac.css  nav_bar.css  opac_main.css  opac_marc.css  progress_bar.css  record_detail.css  record_result.css  sidebar.css  survey.css  xtree.css
Evergreen/src/extras/: overdue_notice_email  report-fail  report-success
Evergreen/src/support-scripts/: eg_gen_overdue.pl  eg_gen_overdue.sh
Evergreen/staff_client/: Makefile  README  application.ini  install.js  install.rdf
Evergreen/staff_client/chrome/: chrome.manifest
Open-ILS/src/: Makefile  Makefile.am
Open-ILS/src/apachemods/: Makefile  Makefile.am  apachetools.c  apachetools.h  fieldmapper_IDL.pl  fieldmapper_lookup-gen.pl  fieldmapper_lookup.h  json_xml.c  json_xml.h  mod_idlchunk.c  mod_rest_gateway.c  mod_rest_gateway.h  mod_xmlbuilder.c  mod_xmlbuilder.h  mod_xmlent.c  mod_xmltools.c  mod_xmltools.h  xmltools.c  xmltools.h
Open-ILS/src/asterisk/: asterisk-1.6.2.18-accountcode.patch
Open-ILS/src/c-apps/: Makefile  Makefile.am  buildSQL.c  dump_idl.c  idl_fieldmapper.h  idlval.c  oils_auth.c  oils_auth_internal.c  oils_buildq.c  oils_constants.h  oils_cstore.c  oils_dataloader.c  oils_event.c  oils_event.h  oils_execsql.c  oils_fetch.c  oils_idl-core.c  oils_idl.h  oils_pcrud.c  oils_qstore.c  oils_rstore.c  oils_sql.c  oils_storedq.c  oils_utils.c  oils_utils.h  test_json_query.c  test_qstore.c
Open-ILS/src/cgi-bin/: circ-rules.cgi  config.cgi  config.html  copy_statuses.cgi  grp_permission-setup.cgi  lib-setup.cgi  org_unit_types.cgi  perms-setup.cgi  setup.pl  superuser-setup.cgi  user-profiles.cgi  usr_group-setup.cgi
Open-ILS/src/edi_translator/: README  edi_webrick.bash  edi_webrick.cnf  edi_webrick.rb  install-ubuntu-trusty.sh  install-ubuntu.sh  install.RHEL.sh  install.sh  test_client.pl  test_edi_translator.pl
Open-ILS/src/eg2/: .editorconfig  .eslintrc.json  .gitignore  CHEAT_SHEET.adoc  STYLE_GUIDELINES.adoc  angular.json  eslint.config.mjs  karma.conf.js  nightwatch.conf.js  package-lock.json  package.json  reversion.sh  tsconfig.json  tslint.json
Open-ILS/src/extras/: Evergreen.py  Makefile  Makefile.am  Makefile.install  Perl2REST.pl  autogen.sh  cache-generator.sh  convert_LoCSchemas_to_thesauri.pl  docgen.xsl  eg_config.in  facet_types_js.pl  fast-extract  fast-extract.in  fieldmapper.pl  fieldmapper_IDL.pl  fts-replacement.pl  genreFormSchemes.tsv  genreFormSchemes.utf8.json  ils_events.xml  loc_marc21spec_parser.py  loc_marc21spec_parser.readme  locale_html_options.pl  marc2html  marc_tooltips_to_sql  oils_requestor.c  opensearch.pm  opensearch.ttk  opensearch.xml  opensearchportal.html  opensrf_settings_puller.pl  openurl_map.pl  org_lasso_js.pl  org_tree_html_options.pl  org_tree_js.pl  org_tree_proximity.pl  reconcile-perms.sh  relators.tsv  subjectSchemes.tsv  subjectSchemes.utf8.json
Open-ILS/src/java/: Makefile  Makefile.am
Open-ILS/src/offline/: offline-config.pl  offline-config.pl.in  offline-execute.pl  offline-lib.pl  offline-status.pl  offline-upload.pl  offline.pl
Open-ILS/src/perlmods/: Build.PL  MANIFEST  MANIFEST.SKIP  MYMETA.yml  Makefile.am
Open-ILS/src/python/: Makefile  Makefile.am  setup.py
Open-ILS/src/reporter/: clark-kent.pl  config.sql  find_orphaned_reports.pl  report-fail  report-success  report_base.example.xml  report_failure.tmpl  report_stage1.example.xml  report_success.tmpl  reporter.schema-gen.pl  tables.example.xml  widgets.example.xml
Open-ILS/src/sql/: 005.schema.actors.sql  010.schema.biblio.sql  030.schema.metabib.sql  XXXX.schema.allow_parts_to_be_recreated.sql
Open-ILS/src/support-scripts/: Cstore_test.t  Cstore_test2.t  ac_ctl.pl  acq_order_reader.pl  action_trigger_aggregator.pl  action_trigger_aggregator.pl.in  action_trigger_runner.pl  action_trigger_runner.pl.in  age_money.srfsh  api_ctl  authority_authority_linker.pl.in  authority_control_fields.pl  authority_control_fields.pl.in  background_import_mgr.pl  badge_score_generator.pl  brick_ctl.sh  clear_cc_number.srfsh  clear_expired_circ_history.srfsh  csv_notify_fetcher.pl  delete_old_eresource_link_clicks.pl  edi_fetcher.pl  edi_order_pusher.pl  edi_pusher.pl  eg_db_config.in  eg_db_config.pl  fine_generator.pl  generate-fines.pl  generate_circ_notices.pl  generate_fines.srfsh  hold-copy-capture.pl  hold_copy_targeter.srfsh  hold_targeter.pl  hold_targeter_v2.pl  ingest_ctl  juv_to_adult.srfsh  long-overdue-status-update.pl  make-mods.pl  make_concerto_from_evergreen_db.pl  marc_export  marc_export.in  (+29 more)
Open-ILS/src/templates/: base.tt2  login.tt2  menu.tt2
Open-ILS/src/webxml/: advanced.xml  altcanvas.xml  css_common.xml  index.xml  js_common.xml  login.xml  logo.xml  mresult.xml  rdetail.xml  result_common.xml  result_table.xml  rresult.xml  searchbar.xml  sidebar.xml  webprefs.xml
Open-ILS/updates/: Makefile.am  check  download  manualupdate.html  update.rdf  updatedetails.html
Open-ILS/web/: Makefile.am
Open-ILS/web/images/: licenses.txt
Open-ILS/web/js/: OpenSRF.js
Open-ILS/web/oilsweb/: MANIFEST.in  development.ini  development.ini.example  setup.cfg  setup.py
Open-ILS/web/reports/: oils_rpt.css  oils_rpt.js  oils_rpt.xhtml  (+26 more)
(+11038 files in other folders)
